[package]
name = "urlexpand"
version = "0.1.3"
description = "Expand / Unshorten an exhaustive list of Shortened URL's"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["expand", "unshorten", "url", "link"]
categories = ["web-programming"]
repository = "https://github.com/marirs/urlexpand"
homepage = "https://github.com/marirs/urlexpand"
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

[dependencies]
base64 = "0.13.0"
futures = "0.3.16"
percent-encoding = "2.1.0"
regex = "1.4.6"
reqwest = "0.11.3"
thiserror = "1.0.26"
tokio = "1.9.0"
url = "2.2.1"

[dev-dependencies]
paste = "1.0.5"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }

[features]
sync = []

[badges]
travis-ci = { repository = "marirs/urlexpand" }

[lib]
name = "urlexpand"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
