[package]
name = "urlexpand"
version = "0.2.7"
description = "Expand / Unshorten an exhaustive list of Shortened URL's"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["expand", "unshorten", "url", "link"]
categories = ["web-programming"]
repository = "https://github.com/marirs/urlexpand"
homepage = "https://github.com/marirs/urlexpand"
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.21"
percent-encoding = "2.1.0"
regex = "1"
reqwest = { version = "0.13.1", features = ["native-tls-vendored"] }
thiserror = "2"
tokio = { version = "1.19.2", optional = true }
url = "2.2.2"

[dev-dependencies]
paste = "1.0.7"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true

[features]
blocking = ["tokio"]

[badges]
travis-ci = { repository = "marirs/urlexpand" }

[lib]
name = "urlexpand"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
